--- a/WebAppService/src/styles/DateTimePicker.css
+++ b/WebAppService/src/styles/DateTimePicker.css
@@ -1,10 +1,13 @@
 .react-datepicker-wrapper {
-    z-index: 3;
+    z-index: 5;
     position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
     top: 10px
+}
 
+.react-datepicker-popper {
+	z-index: 5;
 }
 
 #DateTimePicker{
